--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,7 @@
 .App {
   width: 100%;
   height: 100vh;
-  display: flex;
-}
-
-.login-page {
-  display: flex;
-  flex-direction: column;
-  width: 200px;
-  margin: auto;
+  background: antiquewhite;
 }
 
 
