--- a/src/components/login-page/LoginPage.css
+++ b/src/components/login-page/LoginPage.css
@@ -1,6 +1,10 @@
 .login-page {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.section {
+    margin-top: 16px;
     width: 200px;
-    margin: auto;
 }
