--- a/src/components/home/todo-list/TodoList.css
+++ b/src/components/home/todo-list/TodoList.css
@@ -8,8 +8,15 @@
 
 .add-task {
     display: flex;
-    flex-direction: column;
-    width: 200px;
+    justify-content: space-between;
+    align-items: center;
+    height: 24px;
+    margin-bottom: 48px;
+}
+
+.actions {
+    display: flex;
+    align-items: center;
 }
 
 .delete-icon {
